Внесены корректировки